samples/_failures_safe/1761500487_33fb01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e452db55.c: In function ‘main’:
./samples/SAFE/__tmp_e452db55.c:159:25: error: missing terminating " character
  159 |         fprintf(stderr, "Error
      |                         ^~~~~~
./samples/SAFE/__tmp_e452db55.c:159:9: error: expected expression at end of input
  159 |         fprintf(stderr, "Error
      |         ^~~~~~~
./samples/SAFE/__tmp_e452db55.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e452db55.c:159:9: error: expected declaration or statement at end of input
